--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Pallitta_problem1/bin/
 Pallitta_problem1/.classpath
 
 Pallitta_problem1/.project
+
+Pallitta_problem2/.classpath
+
+Pallitta_problem2/.project
